--- a/style.css
+++ b/style.css
@@ -5,15 +5,38 @@
 	padding:0%;
 }
 body{
-	background: linear-gradient(to bottom left, #ff0000 0%, #ff9900 100%);
+	background: linear-gradient(to  left, #ff0000 0%, #ff9900 100%);
 	background-repeat:no-repeat;
 	color:#00ffff;
+	margin:0%;
 }
 .menu{
 	background-color:#00ffff;
 	color:black;
-	margin:20px;
+	margin:50px;
 	padding:5px;
-	border:2px solid #00ffff;
+	border-radius:10px;
+	margin:40px;
+}
+.gem{
+	display:inline-block;
+	margin:40px;
+	color:black;
+	background-color:#00ffff;
+	padding-bottom:5px;
+	box-shadow:10px 5px 10px gray;
 	border-radius:10px;
 }
+.buy{
+	background: linear-gradient(to  left, #ff0000 0%, #ff9900 100%);
+	color:#00ffff;
+	border-radius:10px;
+	
+}
+footer{
+	background-color:black;
+	color:white;
+	margin:0%;
+	padding:5px 5px 5px 10px;
+}
+	
