--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	height:500px;
 	margin:0%;
 	padding:0%;
+	animation: elp 5s 1;
 }
 body{
 	background: linear-gradient(to  left, #ff0000 0%, #ff9900 100%);
@@ -13,10 +14,10 @@ body{
 .menu{
 	background-color:#00ffff;
 	color:black;
-	margin:50px;
 	padding:5px;
 	border-radius:10px;
 	margin:40px;
+	font-size:20px;
 }
 .gem{
 	display:inline-block;
@@ -39,4 +40,27 @@ footer{
 	margin:0%;
 	padding:5px 5px 5px 10px;
 }
-	
+@keyframes elp {
+	0% {width: 50%;}
+	100% {width: 100%;
+		}
+}
+@media screen and (max-width:1100px){
+	.menu{
+		margin:50px;
+	}
+}
+@media screen and (max-width:800px) and (min-width:635px){
+	.gem{
+		width:35%;
+	}
+	.papa{
+		height:500px;
+	}
+}
+			
+@media screen and (min-width:450px) and (max-width:630px){
+		.menu{
+			margin:20px;
+		}
+}
