--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 }
 .gem{
 	display:inline-block;
-	margin:40px;
+	margin:60px;
 	color:black;
 	background-color:#00ffff;
 	padding-bottom:5px;
@@ -64,3 +64,25 @@ footer{
 			margin:20px;
 		}
 }
+.dr{
+	width:25%;
+	display:inline-block;
+	background-color:#00ffff;
+	color:black;
+	padding-bottom:5px;
+	box-shadow:10px 5px 10px gray;
+	border-radius:10px;	
+	border:3px solid black;
+	padding:0 0 5px 0;
+	margin:30px;
+	}
+	a{
+		text-decoration:none;
+		
+		
+	}
+.a{
+	color:#00ffff;
+}
+
+	
